# douyinSpider

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: auth.py  config.py  exceptions.py  main.py  rate_limit.py
backend/db/: crud.py  database.py  models.py
backend/lib/: cookies.py
backend/lib/douyin/: client.py  parser.py  request.py  target.py
backend/routers/: api.py  audio.py  auth.py  task.py  transcribe.py
backend/services/: audio_extractor.py  content_rewrite.py  llm.py  scheduler.py  transcriber.py
backend/utils/: text.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: SearchBox.vue  SettingsModal.vue  VideoCard.vue  VideoList.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts  auth.ts
frontend/src/styles/: main.css
frontend/src/types/: index.ts
frontend/src/views/: Authors.vue  ContentRewrite.vue  ContentWriting.vue  DailyReport.vue  Dashboard.vue  Login.vue  Prompts.vue  Register.vue  Settings.vue  Videos.vue
